# Book-Rental-Microservice

./: .gitignore  README.md
book_service/: .env  pyproject.toml  requirments.txt  test.db
book_service/app/api/: main.py
book_service/app/auth/: dependencies.py
book_service/app/common/: settings.py
book_service/app/exceptions/: custom_exceptions.py  handlers.py
book_service/app/models/: __init__.py  book_model.py
book_service/app/schemas/: base.py  books_schema.py
book_service/db/: book.db
book_service/migrations/: env.py
book_service/migrations/versions/: 2025_04_12_1804-ad58e3ba31c9_books_table_added.py  2025_04_13_0248-9f895afb1fb6_book_service_negative_check_constraint_.py
book_service/tests/: 1_book_post_test.py  2_book_get_test.py  3_book_put_test.py  4_book_patch_test.py  5_book_delete_test.py  conftest.py  test_book_rental_service.py  test_book_service.py  test_book_servoce.py  test_db.py
user_service/: .env  alembic.ini  pyproject.toml  pytest.ini  requirments.txt  test.db
user_service/app/api/: main.py
user_service/app/auth/: auth.py  auth_routes.py  dependencies.py  password.py  token.py
user_service/app/common/: db.py  settings.py
user_service/app/exceptions/: base.py  custom_exceptions.py  handlers.py
user_service/app/migrations/: env.py
user_service/db/: user.db  user.db-journal
user_service/tests/: 1_user_service_post_test.py  2_use_service_get_test.py  3_user_service_put_test.py  4_user_service_patch_test.py  5_user_service_rent_test.py  6_user_delete_test.py  conftest.py  test_api.py  test_db.py  test_user_service.py
(+51 files in other folders)
